fixed missing theme ids for product configuration

--- a/plugins/com.springsource.sts/plugin.xml
+++ b/plugins/com.springsource.sts/plugin.xml
@@ -41,7 +41,19 @@
 				value="%introDescription-tutorials"/>
 		  <property
 				name="introDescription-samples"
-				value="%introDescription-samples"/>                
+				value="%introDescription-samples"/>
+		  <property
+				name="applicationXMI"
+				value="org.eclipse.platform/LegacyIDE.e4xmi">
+		  </property>
+		  <property
+				name="cssTheme"
+				value="org.eclipse.e4.ui.css.theme.e4_default">
+		  </property>
+		  <property
+				name="applicationCSSResources"
+	         	value="platform:/plugin/org.eclipse.platform/images/">
+		  </property>
       </product> 
    </extension>
           
