--- a/features/com.springsource.ggts.product/pom.xml
+++ b/features/com.springsource.ggts.product/pom.xml
@@ -9,9 +9,9 @@
     <version>3.0.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
-  <artifactId>com.springsource.sts.product</artifactId>
+  <artifactId>com.springsource.ggts.product</artifactId>
   <packaging>eclipse-repository</packaging>
-  <name>com.springsource.sts.product</name>
+  <name>com.springsource.ggts.product</name>
   <build>
     <plugins>
 	
@@ -45,9 +45,9 @@
 		<configuration>
 		  <products>
 			<product>
-			  <id>com.springsource.sts.ide</id>
+			  <id>com.springsource.ggts.ide</id>
               <rootFolder>eclipse</rootFolder>
-		      <archiveFileName>springsource-tool-suite-${unqualifiedVersion}.${p2.qualifier}-${dist.target}</archiveFileName>
+		      <archiveFileName>groovy-grails-tool-suite-${unqualifiedVersion}.${p2.qualifier}-${dist.target}</archiveFileName>
 		    </product>
 		  </products>
           <formats>
