changing the name of the distribution file to spring-tool-suite

--- a/features/com.springsource.sts.product/pom.xml
+++ b/features/com.springsource.sts.product/pom.xml
@@ -47,7 +47,7 @@
 			<product>
 			  <id>com.springsource.sts.ide</id>
               <rootFolder>eclipse</rootFolder>
-		      <archiveFileName>springsource-tool-suite-${unqualifiedVersion}.${p2.qualifier}-${dist.target}</archiveFileName>
+		      <archiveFileName>spring-tool-suite-${unqualifiedVersion}.${p2.qualifier}-${dist.target}</archiveFileName>
 		    </product>
 		  </products>
           <formats>
