--- a/pom.xml
+++ b/pom.xml
@@ -107,9 +107,15 @@
 		  <layout>p2</layout>
 		  <url>http://dist.springsource.com/release/TOOLS/patches/bug367669</url>
 		</repository>
+		<repository>
+		  <id>atlassian</id>
+		  <layout>p2</layout>
+		  <url>http://update.atlassian.com/atlassian-eclipse-plugin/e3.7/</url>
+		</repository>
 	  </repositories>
 	  <modules>
 		<module>features/com.springsource.sts.package.e3.7</module>
+		<module>features/com.springsource.ggts.package.e3.7</module>
 	  </modules>
 	</profile>
 	<profile>
@@ -144,6 +150,11 @@
 		  <id>groovy</id>
 		  <layout>p2</layout>
 		  <url>http://dist.codehaus.org/groovy/distributions/greclipse/snapshot/e4.2/</url>
+		</repository>
+		<repository>
+		  <id>atlassian</id>
+		  <layout>p2</layout>
+		  <url>http://update.atlassian.com/atlassian-eclipse-plugin/e3.7/</url>
 		</repository>
 	  </repositories>
 	  <modules>
@@ -182,6 +193,11 @@
 		  <id>groovy</id>
 		  <layout>p2</layout>
 		  <url>http://dist.codehaus.org/groovy/distributions/greclipse/snapshot/e4.2/</url>
+		</repository>
+		<repository>
+		  <id>atlassian</id>
+		  <layout>p2</layout>
+		  <url>http://update.atlassian.com/atlassian-eclipse-plugin/e3.7/</url>
 		</repository>
 	  </repositories>
 	  <modules>
@@ -246,13 +262,7 @@
 	<repository>
 	  <id>mylyn</id>
 	  <layout>p2</layout>
-<!--	  <url>http://download.eclipse.org/mylyn/snapshots/3.6/</url> -->
 	  <url>http://download.eclipse.org/mylyn/releases/3.7</url>
-	</repository>
-	<repository>
-	  <id>atlassian</id>
-	  <layout>p2</layout>
-	  <url>http://update.atlassian.com/atlassian-eclipse-plugin/e3.6/</url>
 	</repository>
 	<repository>
 	  <id>m2eclipse-legacy</id>
