--- a/features/com.springsource.sts.product/pom.xml
+++ b/features/com.springsource.sts.product/pom.xml
@@ -57,7 +57,32 @@
 		</configuration>
       </plugin>
 
+      <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-p2-extras-plugin</artifactId>
+          <version>0.14.0</version>
+          <executions>
+              <execution>
+                  <phase>install</phase>
+                  <goals>
+                      <goal>mirror</goal>
+                  </goals>
+              </execution>
+          </executions>
+          <configuration>
+              <source>
+                  <repository>
+                      <url>file://${project.build.directory}/repository</url>
+                      <layout>p2</layout>
+                  </repository>
+              </source>
+              <destination>${project.build.directory}/../../com.springsource.sts.product/target/unitedRepository</destination>
+              <append>true</append>
+          </configuration>
+      </plugin>
+
     </plugins>
+
 	<pluginManagement>
 	  <plugins>
 		<plugin>
@@ -102,6 +127,7 @@
 			</environments>
 		  </configuration>
 		</plugin>
+		
 		<plugin>
 		  <groupId>org.eclipse.tycho</groupId>
 		  <artifactId>tycho-packaging-plugin</artifactId>
@@ -111,6 +137,7 @@
 			<archiveSite>true</archiveSite>
 		  </configuration>
 		</plugin>
+
 	  </plugins>
 	</pluginManagement>
   </build>
