--- a/features/com.springsource.ggts/feature.properties
+++ b/features/com.springsource.ggts/feature.properties
@@ -5,21 +5,21 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=SpringSource Tool Suite (required)
+featureName=Groovy/Grails Tool Suite (required)
 
 # "providerName" property - name of the company that provides the feature
-providerName=SpringSource
+providerName=SpringSource, a division of VMware, Inc.
 
 # "updateSiteName" property - label for the update site
 updateSiteName=SpringSource Tool Suite Updates
 
 # "description" property - description of the feature
 description=\
-This feature is required to install the SpringSource Tool Suite
+This feature is required to install the Groovy/Grails Tool Suite
 
 # "copyright" property - text of the Copyright
 copyright=\
-Copyright (c) 2007-2010 SpringSource.  All rights reserved.
+Copyright (c) 2012 VMware, Inc.
 
 ################ end of copyright property ####################################
 
