--- a/features/com.springsource.ggts.package.e4.2/feature.properties
+++ b/features/com.springsource.ggts.package.e4.2/feature.properties
@@ -5,21 +5,21 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=SpringSource Tool Suite Package
+featureName=Groovy/Grails Tool Suite Package
 
 # "providerName" property - name of the company that provides the feature
-providerName=SpringSource
+providerName=SpringSource, a division of VMware, Inc.
 
 # "updateSiteName" property - label for the update site
 updateSiteName=SpringSource Tool Suite Updates
 
 # "description" property - description of the feature
 description=\
-This feature installs all SpringSource Tool Suite features.
+This feature installs all Groovy/Grails Tool Suite features.
 
 # "copyright" property - text of the Copyright
 copyright=\
-Copyright (c) 2007-2010 SpringSource.  All rights reserved.
+Copyright (c) 2012 VMware, Inc.
 
 ################ end of copyright property ####################################
 
