added additional repo to grab newer version of m2e-wtp, in order to fix build issues with old 0.14.0 version of m2e-wtp

--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
 		<repository>
 		  <id>maven-wtp</id>
 		  <layout>p2</layout>
+		  <url>http://download.jboss.org/jbosstools/updates/requirements/m2eclipse/m2eclipse-wtp-0.15.2/</url>
+		</repository>
+		<repository>
+		  <id>maven-wtp</id>
+		  <layout>p2</layout>
 		  <url>http://dist.springsource.com/release/TOOLS/third-party/m2e/</url>
 		</repository>
 	  </repositories>
