--- a/features/com.springsource.sts.package/pom.xml
+++ b/features/com.springsource.sts.package/pom.xml
@@ -10,7 +10,25 @@
   </parent>
   <artifactId>com.springsource.sts.package</artifactId>
   <packaging>eclipse-feature</packaging>
-  <build>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-p2-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<execution>
+						<id>second-generate-p2-metadata</id>
+						<goals>
+							<goal>p2-metadata</goal>
+						</goals>
+						<phase>verify</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+
 	<pluginManagement>
 	  <plugins>
 		<plugin>
