--- a/features/com.springsource.ggts.product/pom.xml
+++ b/features/com.springsource.ggts.product/pom.xml
@@ -96,11 +96,11 @@
 							<property name="dist.full.version" value="${unqualifiedVersion}.${p2.qualifier}-${dist.target}" />
 
 							<property name="dist.file.name" value="${dist.project}-${dist.full.version}-updatesite.zip" />
-							<property name="dist.full.path" value="${site.target.dir}/unitedRepository/${dist.file.name}" />
+							<property name="dist.full.path" value="${site.target.dir}/}/../../com.springsource.sts.product/target/unitedRepository/${dist.file.name}" />
 
 							<delete file="${dist.full.path}" />
 							<zip zipfile="${dist.full.path}" filesonly="true">
-								<zipfileset dir="${site.target.dir}/unitedRepository">
+								<zipfileset dir="${site.target.dir}/../../com.springsource.sts.product/target/unitedRepository">
 									<exclude name="*.zip" />
 									<exclude name="**/*.gz" />
 								</zipfileset>
