--- a/features/com.springsource.ggts.package.e4.2/.project
+++ b/features/com.springsource.ggts.package.e4.2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.springsource.sts.package-feature-e4.2</name>
+	<name>com.springsource.ggts.package-feature-e4.2</name>
 	<comment></comment>
 	<projects>
 	</projects>
