--- a/features/com.springsource.ggts/.project
+++ b/features/com.springsource.ggts/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.springsource.sts-feature</name>
+	<name>com.springsource.ggts-feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
