--- a/plugins/com.springsource.ggts/.project
+++ b/plugins/com.springsource.ggts/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.springsource.sts</name>
+	<name>com.springsource.ggts</name>
 	<comment></comment>
 	<projects>
 	</projects>
