new splash screens

--- a/plugins/com.springsource.ggts/plugin.xml
+++ b/plugins/com.springsource.ggts/plugin.xml
@@ -17,13 +17,13 @@
                 value="c2cd23"/>
           <property
                 name="startupMessageRect"
-                value="18,210,544,20"/>
+                value="29,128,540,20"/>
           <property
                 name="startupProgressRect"
-                value="0,275,600,15"/>
+                value="29,146,540,14"/>
           <property
                 name="versionRect"
-                value="447,83" />
+                value="443,78" />
           <property
           		name="introTitle"
           		value="%productIntroTitle"/>
@@ -61,11 +61,11 @@
          point="org.eclipse.ui.splashHandlers">
       <splashHandler
             class="com.springsource.sts.internal.splash.VersionDisplayingSplashHandler"
-            id="com.springsource.sts.ide.ui.splash">
+            id="com.springsource.ggts.ide.ui.splash">
       </splashHandler>
       <splashHandlerProductBinding
-            productId="com.springsource.sts.ide"
-            splashId="com.springsource.sts.ide.ui.splash">
+            productId="com.springsource.ggts.ide"
+            splashId="com.springsource.ggts.ide.ui.splash">
       </splashHandlerProductBinding>
    </extension>
 
