adding qualifier replace tokens back, got lost when moving to new repository

--- a/plugins/com.springsource.ggts/plugin.properties
+++ b/plugins/com.springsource.ggts/plugin.properties
@@ -4,8 +4,8 @@ providerName=SpringSource
 productName=Groovy/Grails Tool Suite
 productBlurb=Groovy/Grails Tool Suite \n\
 \n\
-Version: 3.0.0.SNAPSHOT\n\
-Build Id: 201205291508\n\
+Version: @QUALIFIER@\n\
+Build Id: @BUILD_ID@\n\
 \n\
 Copyright (c) 2007 - 2012 SpringSource, a division of VMware, Inc.\n\
 All rights reserved. Visit http://springsource.com/products/sts\n\
