--- a/plugins/com.springsource.sts/about.properties
+++ b/plugins/com.springsource.sts/about.properties
@@ -4,10 +4,10 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-title=SpringSource Tool Suite \n\
+title=Spring Tool Suite \n\
 \n\
-Version: 3.0.0.SNAPSHOT\n\
-Build Id: 201205291508\n\
+Version: @QUALIFIER@\n\
+Build Id: @BUILD_ID@\n\
 \n\
 Copyright (c) 2007 - 2012 SpringSource, a division of VMware, Inc.\n\
 All rights reserved. Visit http://springsource.com/products/sts\n\
