--- a/plugins/com.springsource.sts/plugin.properties
+++ b/plugins/com.springsource.sts/plugin.properties
@@ -1,11 +1,11 @@
-pluginName=SpringSource Tool Suite
+pluginName=Spring Tool Suite
 providerName=SpringSource
 
-productName=SpringSource Tool Suite
-productBlurb=SpringSource Tool Suite \n\
+productName=Spring Tool Suite
+productBlurb=Spring Tool Suite \n\
 \n\
-Version: 3.0.0.SNAPSHOT\n\
-Build Id: 201205291508\n\
+Version: @QUALIFIER@\n\
+Build Id: @BUILD_ID@\n\
 \n\
 Copyright (c) 2007 - 2012 SpringSource, a division of VMware, Inc.\n\
 All rights reserved. Visit http://springsource.com/products/sts\n\
@@ -15,8 +15,8 @@ Apache Software Foundation http://www.apache.org
 
 introCustomizationPreference.name = Welcome
 
-productIntroTitle = Welcome to SpringSource Tool Suite 3.0.0.SNAPSHOT
-productIntroBrandingText = SpringSource Tool Suite
+productIntroTitle = Welcome to Spring Tool Suite @QUALIFIER@
+productIntroBrandingText = Spring Tool Suite
 introDescription-overview = The Eclipse Platform is a kind of universal tool platform - an open extensible IDE for anything and nothing in particular. 
 introDescription-tutorials = Learn how to be productive using Eclipse by completing end-to-end tutorials that will guide you along the way.
 introDescription-samples = Explore Eclipse by installing prefabricated samples (may require Internet connection).
