--- a/features/com.springsource.sts.product/pom.xml
+++ b/features/com.springsource.sts.product/pom.xml
@@ -12,6 +12,38 @@
   <artifactId>com.springsource.sts.product</artifactId>
   <packaging>eclipse-repository</packaging>
   <name>com.springsource.sts.product</name>
+
+  <properties>
+	<features>org.eclipse.m2e.feature.feature.group,org.eclipse.m2e.logback.feature.feature.group,org.maven.ide.eclipse.ajdt.feature.feature.group,org.maven.ide.eclipse.wtp.feature.feature.group,org.sonatype.m2e.buildhelper.feature.feature.group,org.sonatype.m2e.mavenarchiver.feature.feature.group,org.springframework.ide.eclipse.uaa.feature.feature.group</features>
+	<build.destination.cocoa.x86>target/products/com.springsource.sts.ide/macosx/cocoa/x86/eclipse</build.destination.cocoa.x86>
+	<build.destination.cocoa.x86_64>target/products/com.springsource.sts.ide/macosx/cocoa/x86_64/eclipse</build.destination.cocoa.x86_64>
+	<build.destination.linux.x86>target/products/com.springsource.sts.ide/linux/gtk/x86/eclipse</build.destination.linux.x86>
+	<build.destination.linux.x86_64>target/products/com.springsource.sts.ide/linux/gtk/x86_64/eclipse</build.destination.linux.x86_64>
+	<build.destination.win.x86>target/products/com.springsource.sts.ide/win32/win32/x86/eclipse</build.destination.win.x86>
+	<build.destination.win.x86_64>target/products/com.springsource.sts.ide/win32/win32/x86_64/eclipse</build.destination.win.x86_64>
+  </properties>
+
+  <profiles>
+	<profile>
+	  <id>e37</id>
+	  <properties>
+<sites>http://download.eclipse.org/releases/indigo/,http://dist.springsource.com/release/TOOLS/third-party/m2e/,http://dist.springsource.org/release/AJDT/configurator/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
+	  </properties>
+	</profile>
+	<profile>
+	  <id>e38</id>
+	  <properties>
+<sites>http://download.eclipse.org/releases/juno/,http://download.jboss.org/jbosstools/updates/m2eclipse-wtp/,http://dist.springsource.org/release/AJDT/configurator/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
+	  </properties>
+	</profile>
+	<profile>
+	  <id>e42</id>
+	  <properties>
+<sites>http://download.eclipse.org/releases/juno/,http://download.jboss.org/jbosstools/updates/m2eclipse-wtp/,http://dist.springsource.org/release/AJDT/configurator/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
+	  </properties>
+	</profile>
+  </profiles>
+
   <build>
     <plugins>
 	
@@ -34,12 +66,14 @@
 			<goals>
 			  <goal>materialize-products</goal>
 			</goals>
+            <phase>package</phase>
 		  </execution>
 		  <execution>
 			<id>archive-products</id>
 			<goals>
 			  <goal>archive-products</goal>
 			</goals>
+            <phase>verify</phase>
 		  </execution>
 		</executions>
 		<configuration>
@@ -79,6 +113,114 @@
               <destination>${project.build.directory}/../../com.springsource.sts.product/target/unitedRepository</destination>
               <append>true</append>
           </configuration>
+      </plugin>
+
+      <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-eclipserun-plugin</artifactId>
+          <version>0.14.0</version>
+          <configuration>
+              <argLine>-Declipse.p2.mirrors=false</argLine>
+              <appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.cocoa.x86} -repository ${sites} -installIUs ${features}</appArgLine>
+          </configuration>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>eclipse-run</goal>
+                  </goals>
+                  <phase>package</phase>
+              </execution>
+          </executions>
+      </plugin>
+
+      <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-eclipserun-plugin</artifactId>
+          <version>0.14.0</version>
+          <configuration>
+              <argLine>-Declipse.p2.mirrors=false</argLine>
+              <appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.cocoa.x86_64} -repository ${sites} -installIUs ${features}</appArgLine>
+          </configuration>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>eclipse-run</goal>
+                  </goals>
+                  <phase>package</phase>
+              </execution>
+          </executions>
+      </plugin>
+
+      <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-eclipserun-plugin</artifactId>
+          <version>0.14.0</version>
+          <configuration>
+              <argLine>-Declipse.p2.mirrors=false</argLine>
+              <appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.linux.x86} -repository ${sites} -installIUs ${features}</appArgLine>
+          </configuration>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>eclipse-run</goal>
+                  </goals>
+                  <phase>package</phase>
+              </execution>
+          </executions>
+      </plugin>
+
+      <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-eclipserun-plugin</artifactId>
+          <version>0.14.0</version>
+          <configuration>
+              <argLine>-Declipse.p2.mirrors=false</argLine>
+              <appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.linux.x86_64} -repository ${sites} -installIUs ${features}</appArgLine>
+          </configuration>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>eclipse-run</goal>
+                  </goals>
+                  <phase>package</phase>
+              </execution>
+          </executions>
+      </plugin>
+
+      <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-eclipserun-plugin</artifactId>
+          <version>0.14.0</version>
+          <configuration>
+              <argLine>-Declipse.p2.mirrors=false</argLine>
+              <appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.win.x86} -repository ${sites} -installIUs ${features}</appArgLine>
+          </configuration>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>eclipse-run</goal>
+                  </goals>
+                  <phase>package</phase>
+              </execution>
+          </executions>
+      </plugin>
+
+      <plugin>
+          <groupId>org.eclipse.tycho.extras</groupId>
+          <artifactId>tycho-eclipserun-plugin</artifactId>
+          <version>0.14.0</version>
+          <configuration>
+              <argLine>-Declipse.p2.mirrors=false</argLine>
+              <appArgLine>-consoleLog -application org.eclipse.equinox.p2.director -nosplash -destination ${build.destination.win.x86_64} -repository ${sites} -installIUs ${features}</appArgLine>
+          </configuration>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>eclipse-run</goal>
+                  </goals>
+                  <phase>package</phase>
+              </execution>
+          </executions>
       </plugin>
 
     </plugins>
