--- a/features/com.springsource.sts.product/pom.xml
+++ b/features/com.springsource.sts.product/pom.xml
@@ -97,7 +97,7 @@
           <version>0.14.0</version>
           <executions>
               <execution>
-                  <phase>install</phase>
+                  <phase>verify</phase>
                   <goals>
                       <goal>mirror</goal>
                   </goals>
